--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.0",
     "@mui/material": "^5.5.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.26.1",
     "leaflet": "^1.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-gauge-chart": "^0.4.0",
     "react-leaflet": "^2.7.0",
     "react-scripts": "3.4.3"
   },
